TItle changed in the index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8"> <!-- utf-8 is a character set. UTF-8 refers to Unicode -->
-	<title> Adarsh Saulick - Portfolio</title>
+	<title> My portfolio</title>
 	<link rel="shortcut icon" href="./img/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
