--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"> 
-		<title> Contact me</title>
+		<title> Contact Adarsh Saulick</title>
 		<link rel="shortcut icon" href="./img/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 		<link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
