--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 	<head>
 
 	<meta charset="utf-8"> 
-	<title> About me</title>
+	<title> Get to know me</title>
 	<link rel="shortcut icon" href="./img/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
