Fixed errors on contact page. Align center taken out

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
 	</header>
 
-	<main align="center">
+	<main>
 			CareerFoundry UK<br>
 			Silver Str. 120<br>
 			49238 London<br>
@@ -47,7 +47,7 @@
 	</main>
 
 	<!-- FORM -->
-	<form align="center" action ="" method="post" id="contact-form">
+	<form action="#" method="post" class="contact-form">
 
 
 		<label class="standard-label" for="contact-tel">Tel:</label>
